--- a/Tiki.vn/Home/CSS/header.css
+++ b/Tiki.vn/Home/CSS/header.css
@@ -49,7 +49,7 @@ body{
 }
 /* Thanh tìm kiếm */
 .container-search{
-    width: 67%;
+    width: 70%;
 }
 .icon-search{     /* kich thuoc icon search */
     padding-top: 1%;
@@ -322,4 +322,708 @@ body{
 }
 #icon-commit{
     color: #0071ff;
+}
+@media(max-width:649px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    #text{
+        font-size: 9px;
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 10px;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 25%;
+        height: 70%;
+    }
+    .menu-shortcut{ 
+        width: 19%;
+    }
+    .shortcut-home{ 
+        width: 20%;
+        padding: 2%;
+        margin-left: 0;
+        font-size: 70%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 20%;
+        padding: 1%;
+        font-size: 70%;
+    }
+    .shortcut-user:hover .list-shortcut-user{
+        display: none;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 15px;
+        height: 15px;
+    }
+    .shortcut-shoppingcart{
+        margin-left: 0;
+        margin-top: 4%;
+        height: 70%;
+    }
+    .list-recommend{
+        margin-top: 40px;
+        font-size: 11px;
+    }
+    .location{
+        font-size: 70%;
+        margin-top: 40px;
+        margin-left: 30px;
+        width: 40%;
+    }
+    .img-location{
+        width: 10px;
+        height: 10px;
+    }
+    .button-signIn , .button-signUp{
+       display: none;
+    }
+    .commit{
+        margin-top: 30px;
+        padding: 5px;
+        height: 20px;
+    }
+    .list-commit{
+        width: 19%;
+        font-size: 8px;
+    }
+    .header-list-commit{
+        font-size: 11px;
+    }
+    .first-list-commit{
+        font-size: 10px;
+    }
+    .img-commit{
+        width: 19%;
+    }
+}
+@media (min-width:650px) and (max-width:749px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    #text{
+        font-size: 9px;
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 10px;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 27%;
+        height: 30px;
+    }
+    .menu-shortcut{ 
+        width: 19%;
+    }
+    .shortcut-home{ 
+        width: 20%;
+        padding: 2%;
+        margin-left: 0;
+        font-size: 70%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 20%;
+        padding: 1%;
+        font-size: 70%;
+    }
+    .shortcut-user:hover .list-shortcut-user{
+        display: none;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 15px;
+        height: 15px;
+    }
+    .shortcut-shoppingcart{
+        margin-left: 0;
+        margin-top: 4%;
+        height: 70%;
+    }
+    .list-recommend{
+        margin-top: 40px;
+        font-size: 70%;
+        width: 50%;
+    }
+    .location{
+        font-size: 70%;
+        margin-top: 40px;
+        margin-left: 30px;
+    }
+    .img-location{
+        width: 10px;
+        height: 10px;
+    }
+    .button-signIn , .button-signUp{
+       display: none;
+    }
+    .commit{
+        margin-top: 30px;
+        padding: 5px;
+        height: 20px;
+    }
+    .list-commit{
+        width: 19%;
+        font-size: 8px;
+    }
+    .header-list-commit{
+        font-size: 11px;
+    }
+    .first-list-commit{
+        font-size: 10px;
+    }
+    .img-commit{
+        width: 19%;
+    }
+}
+@media (min-width:750px) and (max-width:849px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    #text{
+        font-size: 10px;
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 10px;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 30%;
+        height: 30px;
+    }
+    .menu-shortcut{ 
+        width: 20%;
+    }
+    .shortcut-home{ 
+        width: 20%;
+        padding: 2%;
+        margin-left: 0;
+        font-size: 70%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 20%;
+        padding: 1%;
+        font-size: 70%;
+    }
+    .shortcut-user:hover .list-shortcut-user{
+        display: none;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 15px;
+        height: 15px;
+    }
+    .shortcut-shoppingcart{
+        margin-left: 0;
+        margin-top: 4%;
+        height: 70%;
+    }
+    .list-recommend{
+        margin-top: 40px;
+        font-size: 70%;
+        width: 50%;
+    }
+    .location{
+        font-size: 70%;
+        margin-top: 40px;
+        margin-left: 30px;
+    }
+    .img-location{
+        width: 10px;
+        height: 10px;
+    }
+    .button-signIn , .button-signUp{
+        width: 100%;
+        height: 20px;
+        font-size: 10px;
+    }
+    .commit{
+        padding: 5px;
+        height: 25px;
+    }
+    .list-commit{
+        width: 20%;
+        font-size: 10px;
+    }
+    .header-list-commit{
+        font-size: 11px;
+    }
+    .first-list-commit{
+        font-size: 10px;
+    }
+    .img-commit{
+        width: 15%;
+    }
+}
+@media (min-width:850px) and (max-width:999px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    #text{
+        font-size: 10px;
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 10px;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 30%;
+        height: 30px;
+    }
+    .menu-shortcut{ 
+        width: 20%;
+    }
+    .shortcut-home{ 
+        width: 30%;
+        padding: 2%;
+        margin-left: 0;
+        font-size: 80%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 37%;
+        padding: 1%;
+        font-size: 90%;
+    }
+    .shortcut-user:hover .list-shortcut-user{
+        display: none;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 20px;
+    }
+    .shortcut-shoppingcart{
+        margin-left: 0;
+        margin-top: 4%;
+        height: 80%;
+    }
+    .list-recommend{
+        margin-top: 40px;
+        font-size: 90%;
+        width: 50%;
+    }
+    .location{
+        font-size: 90%;
+        margin-top: 40px;
+        margin-left: 30px;
+    }
+    .img-location{
+        width: 10px;
+        height: 10px;
+    }
+    .button-signIn , .button-signUp{
+        width: 100%;
+        height: 20px;
+        font-size: 10px;
+    }
+    .commit{
+        padding: 5px;
+        height: 30px;
+    }
+    .list-commit{
+        width: 20%;
+        font-size: 10px;
+    }
+    .header-list-commit{
+        font-size: 12px;
+    }
+    .first-list-commit{
+        font-size: 11px;
+    }
+    .img-commit{
+        width: 15%;
+    }
+}
+@media (min-width:1000px) and (max-width:1059px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    #text{
+        font-size: 12px;
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 15px;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 38%;
+    }
+    .menu-shortcut{ 
+        width: 18%;
+    }
+    .shortcut-home{ 
+        width: 80px;
+        padding: 2%;
+        margin-left: 0;
+        font-size: 12px;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 18px;
+        height: 18px;
+    }
+    .shortcut-shoppingcart{
+        margin-left: 0;
+        margin-top: 4%;
+        height: 70%;
+    }
+    .list-recommend{
+        margin-top: 30px;
+        font-size: 12px;
+        width: 50%;
+    }
+    .location{
+        font-size: 12px;
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+    .img-location{
+        width: 15px;
+        height: 15px;
+    }
+    .button-signIn , .button-signUp{
+        width: 65px;
+        font-size: 12px;
+    }
+    .commit{
+        padding: 5px;
+        height: 30px;
+    }
+}
+@media (min-width:1060px) and (max-width:1149px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    #text{
+        font-size: 12px;
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 15px;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 40%;
+    }
+    .menu-shortcut{ 
+        width: 18%;
+    }
+    .shortcut-home{ 
+        width: 80px;
+        padding: 2%;
+        margin-left: 0;
+        font-size: 12px;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 18px;
+        height: 18px;
+    }
+    .shortcut-shoppingcart{ 
+        margin-top: 3%;;
+        height: 80%;
+    }
+    .list-recommend{
+        margin-top: 30px;
+        font-size: 12px;
+        width: 50%;
+    }
+    .location{
+        font-size: 12px;
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+    .button-signIn , .button-signUp{
+        width: 80px;
+        font-size: 13px;
+    }
+    .commit{
+        padding: 5px;
+        height: 30px;
+    }
+}
+@media (min-width:1150px) and (max-width:1299px){
+    .home-logo{ 
+        margin-left: 0;/* /////////// */
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        width: 5%;
+        height: 50%;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 40%;
+    }
+    .button-search{
+        padding: 0;
+    }
+    .link-search{
+        font-size: 13px;
+    }
+    .menu-shortcut{ 
+        width: 23%;
+    }
+    .shortcut-home{ 
+        width: 100px;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 18px;
+        height: 18px;
+    }
+    .shortcut-shoppingcart{ 
+        margin-top: 3%;;
+        height: 80%;
+    }
+    .list-recommend{
+        margin-top: 25px;
+        width: 50%;
+    }
+    .location{
+        margin-top: 25px;
+        margin-left: 30px;
+    }
+    .commit{
+        padding: 5px;
+        height: 30px;
+    }
+}
+@media (min-width:1300px) and (max-width:1399px){
+    .home-logo{ 
+        margin-left: 2%;/* /////////// */
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 50%;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 50%;
+    }
+    .menu-shortcut{ 
+        width: 23%;
+    }
+    .shortcut-home{ 
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 18px;
+        height: 18px;
+    }
+    .shortcut-shoppingcart{ 
+        margin-top: 3%;;
+        height: 80%;
+    }
+    .list-recommend{
+        margin-top: 15px;
+        width: 50%;
+    }
+    .location{
+        margin-top: 15px;
+        margin-left: 30px;
+    }
+}
+@media (min-width:1400px) and (max-width:1499px){
+    .home-logo{ 
+        margin-left: 5%;/* /////////// */
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 50%;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 50%;
+    }
+    .menu-shortcut{ 
+        width: 23%;
+    }
+    .shortcut-home{ 
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 18px;
+        height: 18px;
+    }
+    .shortcut-shoppingcart{ 
+        margin-top: 3%;;
+        height: 80%;
+    }
+    .list-recommend{
+        margin-top: 15px;
+        width: 50%;
+    }
+    .location{
+        margin-top: 15px;
+        margin-left: 30px;
+    }
+}
+@media (min-width:1500px) and (max-width:1699px){
+    .home-logo{ 
+        margin-left: 5%;/* /////////// */
+    }
+    .container-search{
+        width: 80%;
+    }
+    .icon-search{ 
+        height: 50%;
+    }
+    .search{ /*chieu dai cua thanh tim kiem*/
+        width: 50%;
+    }
+    .menu-shortcut{ 
+        width: 23%;
+    }
+    .shortcut-home{ 
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-home{  /* dinh dang icon home*/
+        margin-top: 5px;/* /////////// */
+        width: 20px;/* /////////// */
+        height: 20px;/* /////////// */
+    }
+    .shortcut-user{
+        width: 100px;
+        padding: 2%;
+    }
+    .icon-user{ /* dinh dang icon*/
+        margin-top: 5px;
+        width: 18px;
+        height: 18px;
+    }
+    .shortcut-shoppingcart{ 
+        margin-top: 3%;;
+        height: 80%;
+    }
+    .list-recommend{
+        margin-top: 15px;
+        width: 50%;
+    }
+    .location{
+        margin-top: 15px;
+        margin-left: 30px;
+    }
 }
