--- a/Tiki.vn/Home/CSS/signup.css
+++ b/Tiki.vn/Home/CSS/signup.css
@@ -19,9 +19,11 @@
     margin-bottom: 4px;
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
+    height: 600px;
 }
 .img-tiki{
     width: 100%;
+    height: 99%;
     border-top-left-radius:  10px;
     border-bottom-left-radius: 10px;
 }
@@ -41,7 +43,7 @@ input {
     margin-bottom: -10px;
 }
 .title{
-    color: #1ba8ff;
+    color: #1770a7;
     margin-top: 30px;
 }
 .password{
@@ -122,4 +124,10 @@ body{
 }
 .disabled{
     color: gray;
+}
+.style-radio{
+    margin-top: 20px;
+}
+.text-polecy{
+    font-size: 13px;
 }
